repo-post/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyx-post
  namespace: tinyx
  labels:
    app: tinyx-post
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyx-post
  template:
    metadata:
      labels:
        app: tinyx-post
    spec:
      containers:
        - name: tinyx-post
          image: registry.cri.epita.fr/charles.simon-meunier/tinyx/tinyx-repo-post:latest
          ports:
            - name: http
              containerPort: 9001
          volumeMounts:
            - mountPath: /config/
              name: application-properties
      imagePullSecrets:
        - name: tinyx-pull-secret
      volumes:
        - name: application-properties
          configMap:
            name: tinyx-post-application-properties
