repo-post/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tinyx-post
  namespace: tinyx
spec:
  selector:
    app: tinyx-post
  ports:
    - name: http
      port: 9001
      targetPort: 9001
      protocol: TCP
